<resources>

    <string name="facebook_app_id">1679155815668745</string>
    <string name="app_name_launcher">Dourik | دورك</string>
    <string name="app_name">Dourik | دورك</string>
    <string name="app_name_capital">DOURIK</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!-- For navigation drawer-->
    <string name="menu_favorite">Favourite</string>
    <string name="menu_services">Services</string>
    <string name="menu_alerts">Alerts</string>
    <string name="menu_appointments">Appointments</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="txt_cancel">CANCEL</string>
    <string name="txt_reschedule">RESCHEDULE</string>
    <string name="txt_modify">MODIFY</string>
    <string name="txt_rebook">REBOOK</string>
    <string name="txt_submit">SUBMIT</string>
    <string name="navigation_menu_username">Guest</string>
    <string name="btn_reschedule_appointment">Modify Appointment</string>

    <!-- End For navigation drawer-->

    <!-- login screen -->
    <string name="txt_sign_up">SIGN UP</string>
    <string name="txt_sign_in">SIGN IN</string>
    <string name="txt_password">Password</string>
    <string name="txt_forget_password">Forget Password?</string>
    <string name="txt_login">LOGIN</string>
    <string name="txt_or_login_via">or login via</string>
    <string name="txt_skip">Skip</string>
    <string name="capital_ltr_skip">SKIP</string>


    <!-- Sign up screen -->
    <string name="txt_phone_no">Phone no</string>
    <string name="alert_please_enter_name">Please enter name</string>
    <string name="alert_please_enter_phone_no">Please enter phone no</string>
    <string name="alert_please_enter_emailid">Please enter email address</string>
    <string name="alert_please_enter_password">Please enter password</string>
    <string name="txt_country_code">Country code</string>
    <string name="alert_please_confirm_password">Please enter confirm password</string>
    <string name="alert_password_not_match">password not match</string>
    <string name="alert_please_enter_valid_email_id">Please enter valid email address</string>

    <!-- start for categories -->
    <string name="txt_category">Select Category</string>

    <!--Start For settings screen -->
    <string name="txt_edit_profile">Edit Profile</string>
    <string name="txt_name">Name</string>
    <string name="txt_email">Email</string>
    <string name="txt_email_id">Email ID</string>
    <string name="txt_mobile_no">Mobile No.</string>
    <string name="txt_location">Location</string>
    <string name="hint_enter_here">Enter Here</string>
    <string name="hint_email">john@gmail.com</string>
    <string name="txt_change_language">Change Language</string>
    <string name="txt_english">English</string>
    <string name="txt_arabic">العربية</string>
    <string name="btn_text_save">Save</string>
    <string name="txt_theme">Theme</string>
    <string name="txt_dob">Dob</string>
    <string name="txt_hint_dob">dd-MM-yyy</string>
    <string name="txt_gender">Gender</string>
    <string name="txt_select_country_code">Select</string>

    <string name="txt_choose_gender">Choose Gender</string>
    <string name="txt_male">Male</string>
    <string name="txt_female">Female</string>

    <string name="enter_name">Please enter name.</string>
    <string name="enter_mobile">Please enter mobile number.</string>
    <string name="enter_country_code">Please select country code.</string>
    <string name="enter_dob">Please select DOB.</string>
    <string name="enter_gender">Please select gender.</string>

    <!--END For settings screen -->


    <!-- start for Change password screen -->
    <string name="change_password_header">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password_lbl">Confirm Password</string>
    <string name="submit_btn">Submit</string>
    <string name="password_hint">********</string>
    <string name="alert_please_enter_previous_password">Please enter previous password.</string>
    <string name="alert_please_enter_new_password">Please enter new password.</string>
    <string name="alert_please_enter_confirm_password">Please enter confirm password.</string>
    <string name="alert_new_and_confirm_password_are_not_same">New and confirm password are not same.</string>

    <!--END For Change password  screen -->

    <!-- start for Forget password screen -->
    <string name="forget_password_header">Forget Password</string>
    <string name="email_id">Email Id</string>
    <string name="enter_here_hint">Enter here</string>
    <string name="submit">Submit</string>
    <!--END For Forget password  screen -->


    <!--For alert screen -->
    <string name="txt_alert_msg">Dave Dud has Accepted your Appointment!</string>
    <string name="txt_date_time">tue 2 Aug at 11:00 PM</string>
    <string name="txt_no_alerts">No Alerts</string>
    <string name="press_again_to_exit">Press again to exit</string>
    <string name="delete">Delete</string>
    <!--END For alert screen -->

    <string name="no_favourities">No Favourities.</string>

    <!--For Share your Experience screen -->s
    <string name="hint_write_something">Write Something...</string>


    <!--For Filter screen -->
    <string name="search_hint">Service, Store &amp; location</string>


    <!--For vendor list screen and vendor details screen -->
    <string name="txt_vendor_name">Pretty Looks</string>
    <string name="txt_vendor_address">21 Magon Street, Near Amazon Park ,</string>
    <string name="txt_vendor_distance">(2 Km.)</string>
    <string name="distance_unit_km">KM</string>
    <string name="txt_vendor_price_unit">SAR</string>
    <string name="txt_start_from">Start From</string>
    <string name="txt_about">About</string>
    <string name="txt_review">Reviews</string>
    <string name="set_appointment">Set Appointment</string>
    <string name="txt_select">SELECT</string>
    <string name="txt_selected">SELECTED</string>
    <string name="txt_remove">Remove</string>
    <string name="txt_select_date">SELECT DATE</string>
    <string name="txt_select_time">SELECT TIME SLOT</string>
    <string name="btn_add_date">Click here to add date</string>
    <string name="btn_add_time">Click here to add time</string>
    <string name="txt_confirm_appointment">CONFIRM APPOINTMENT</string>
    <string name="txt_service">Service</string>
    <string name="txt_services">Services</string>
    <string name="txt_no_saloon">No Saloon Found.</string>
    <string name="txt_time_unit">MIN</string>

    <!--END For vendor list screen -->w

    <!-- vendor details about tab screen -->
    <string name="txt_about_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ac orci quis odilo bibendum mattis.</string>
    <string name="txt_timing">Timing</string>

    <!-- appointment screen -->
    <string name="share_experience">Share your experience</string>
    <string name="share_title">Share Experience</string>
    <string name="confirm">Confirm</string>
    <string name="no_appointment">No Appointments.</string>
    <string name="open_appointment">Open</string>
    <string name="complete_appointment">Completed</string>
    <string name="canceled_appointment">Canceled</string>

    <!-- alert texts -->
    <string name="you_logout">You will be Logged out !!</string>
    <string name="for_access_this_please_login">For access this please login</string>
    <string name="message_title">Message</string>
    <string name="ok_button">Ok</string>
    <string name="canceled">Cancel</string>
    <string name="no_alerts">No Alerts.</string>
    <string name="cancel_confirmation">Do you want to cancel?</string>


    <!-- Camera choose fragment -->
    <string name="choose_gallery">Choose Gallery</string>
    <string name="choose_camera">Choose Camera</string>
    <string name="title_dialog_photo_choose">Add photo</string>

    <!-- Review fragment -->
    <string name="txt_no_reviews">No Reviews</string>


    <!-- for push notifications -->
    <string name="title_activity_main">Push Notifications</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>


    <string name="lbl_review">Review</string>
    <string name="txt_low_to_high">ASC</string>
    <string name="txt_high_to_low">DESC</string>
    <string name="lbl_rating">Rating</string>
    <string name="lbl_price">Price</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_category">Category</string>
    <string name="lbl_distance">Distance</string>
    <string name="lbl_apply">Apply</string>
    <string name="lbl_cancel">Cancel</string>


    <string name="lbl_to">to</string>
</resources>
