<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_services"
            android:icon="@drawable/place_icon"
            android:title="@string/menu_services" />
        <item
            android:id="@+id/nav_alerts"
            android:icon="@drawable/notification_btn"
            android:title="@string/menu_alerts"
            app:actionLayout="@layout/notification_counter"/>
        <item
            android:id="@+id/nav_appointments"
            android:icon="@drawable/thumb_icon"
            android:title="@string/menu_appointments"
            app:actionLayout="@layout/notification_counter"/>
        <item
            android:id="@+id/nav_favourite"
            android:icon="@drawable/fav_btn"
            android:title="@string/menu_favorite"
            app:actionLayout="@layout/notification_counter"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/setting_btn"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout_btn"
            android:title="@string/menu_logout" />
    </group>
</menu>