<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="com.groomer.activity.LoginActivity">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <com.groomer.customviews.CustomTextViewMarkNovaBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_name_capital"
            android:textColor="@color/btn_color_blue"
            android:textSize="@dimen/logo_size"
            android:textStyle="bold" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/divider_color" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:padding="15dp">

            <com.groomer.customviews.CustomTextViewMarkNovaSemibold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/email_id"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_emailid"
                style="@style/et_login_style"
                android:layout_marginTop="5dp"
                android:drawableRight="@drawable/email_field_icon"
                android:hint="@string/enter_here_hint" />

            <Button
                android:id="@+id/btn_forgetpassword"
                style="@style/btnStyleLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/submit_btn" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
