<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".login.LoginActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <com.groomer.customviews.CustomTextViewMarkNovaBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/app_name_capital"
                android:textColor="@color/btn_color_blue"
                android:textSize="@dimen/logo_size"
                android:textStyle="bold" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/divider_color" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15dp"
                android:weightSum="7">

                <com.groomer.customviews.CustomTextViewMarkNovaThin
                    android:id="@+id/tv_signin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center_horizontal"
                    android:text="@string/txt_sign_in"
                    android:textColor="@color/blue_light"
                    android:textSize="20sp" />

                <com.groomer.customviews.CustomTextViewMarkNovaThin
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="/"
                    android:textColor="@color/blue_light"
                    android:textSize="20sp" />

                <com.groomer.customviews.CustomTextViewMarkNovaSemibold
                    android:id="@+id/tv_signup"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center_horizontal"
                    android:text="@string/txt_sign_up"
                    android:textColor="@color/blue_light"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:padding="15dp">

                <com.groomer.customviews.CustomTextViewMarkNovaRegular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_name"
                    android:textSize="20sp" />

                <com.groomer.customviews.CustomEditTextMarkNovaRegular
                    android:id="@+id/et_name"
                    style="@style/et_login_style"
                    android:layout_marginTop="5dp"
                    android:drawableRight="@drawable/name_icon"
                    android:hint="@string/hint_enter_here"
                    android:inputType="textCapWords" />

                <com.groomer.customviews.CustomTextViewMarkNovaRegular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/txt_phone_no"
                    android:textSize="20sp" />

                <com.groomer.customviews.CustomEditTextMarkNovaRegular
                    android:id="@+id/et_phone"
                    style="@style/et_login_style"
                    android:layout_marginTop="5dp"
                    android:drawableRight="@drawable/phone_icon"
                    android:hint="@string/hint_enter_here"
                    android:inputType="number" />

                <com.groomer.customviews.CustomTextViewMarkNovaRegular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/txt_email_id"
                    android:textSize="20sp" />

                <com.groomer.customviews.CustomEditTextMarkNovaRegular
                    android:id="@+id/et_emailid"
                    style="@style/et_login_style"
                    android:layout_marginTop="5dp"
                    android:drawableRight="@drawable/email_field_icon"
                    android:hint="@string/hint_enter_here" />

                <com.groomer.customviews.CustomTextViewMarkNovaRegular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/txt_password"
                    android:textSize="20sp" />

                <com.groomer.customviews.CustomEditTextMarkNovaRegular
                    android:id="@+id/et_passowrd"
                    style="@style/et_login_style"
                    android:layout_marginTop="5dp"
                    android:drawableRight="@drawable/lock_field_icon"
                    android:hint="@string/hint_enter_here"
                    android:inputType="textPassword"
                    android:typeface="monospace" />

                <Button
                    android:id="@+id/btn_signup"
                    style="@style/btnStyleLogin"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/txt_sign_up" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
