<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.groomer.settings.SettingFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="15dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp">

                <include
                    layout="@layout/circuler_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="130dp"></include>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerInParent="true"
                    android:src="@drawable/edit_btn" />
            </RelativeLayout>


            <com.groomer.customviews.CustomTextViewMarkNovaSemibold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:text="@string/txt_name"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_name"
                style="@style/et_login_style"
                android:layout_marginTop="5dp"
                android:hint="@string/hint_enter_here" />


            <com.groomer.customviews.CustomTextViewMarkNovaSemibold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:text="@string/txt_email"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_emailid"
                style="@style/et_login_style"
                android:layout_marginTop="5dp"
                android:hint="@string/hint_email" />


            <com.groomer.customviews.CustomTextViewMarkNovaSemibold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:text="@string/txt_mobile_no"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_mobile_no"
                style="@style/et_login_style"
                android:layout_marginTop="5dp"
                android:hint="@string/hint_enter_here" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:orientation="horizontal">


                <com.groomer.customviews.CustomTextViewMarkNovaSemibold
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:text="@string/txt_location"
                    android:textSize="20sp" />

                <Switch
                    android:id="@+id/swh_location"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true" />


            </RelativeLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="fill_parent"
                android:layout_gravity="center_horizontal"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <View
                    android:id="@+id/view_green"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@color/green" />

                <View
                    android:id="@+id/view_blue"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:background="@color/colorBlue" />

                <View
                    android:id="@+id/view_red"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:background="@color/red" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</FrameLayout>
