<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="com.groomer.activity.LoginActivity">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

        <!--<com.groomer.customviews.CustomTextViewMarkNovaBold-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:text="GROOMER"-->
        <!--android:textColor="@color/btn_color_blue"-->
        <!--android:textSize="@dimen/logo_size"-->
        <!--android:textStyle="bold" />-->

        <!--<View-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="1dp"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:background="@color/divider_color" />-->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:padding="15dp">

            <com.groomer.customviews.CustomTextViewMarkNovaRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txt_password"
                android:textSize="20sp" />

            <com.groomer.customviews.CustomEditTextMarkNovaRegular
                android:id="@+id/edt_password"
                style="@style/et_login_style"
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:singleLine="true" />

            <com.groomer.customviews.CustomTextViewMarkNovaRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/new_password"
                android:textSize="20sp" />

            <com.groomer.customviews.CustomEditTextMarkNovaRegular
                android:id="@+id/edt_new_password"
                style="@style/et_login_style"
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:singleLine="true" />

            <com.groomer.customviews.CustomTextViewMarkNovaRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/confirm_password_lbl"
                android:textSize="20sp" />

            <com.groomer.customviews.CustomEditTextMarkNovaRegular
                android:id="@+id/edt_confirm_password"
                style="@style/et_login_style"
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:singleLine="true" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_changepassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/drawerBg"
        android:layout_alignParentBottom="true"
        android:text="@string/change_password_header"
        android:textSize="15sp" />
</RelativeLayout>
