<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <!-- select date label -->
    <com.groomer.customviews.CustomTextViewMarkNovaSemibold
        android:id="@+id/txt_dialog_select_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_20"
        android:text="@string/txt_select_date"
        android:textSize="@dimen/textsize_18sp" />

    <!-- cross icon -->
    <ImageView
        android:id="@+id/cross_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:padding="@dimen/margin_20"
        android:src="@drawable/close_btn" />

    <com.groomer.customviews.CustomButtonMarkNovaRegular
        android:id="@+id/btn_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_dialog_select_date"
        android:layout_margin="@dimen/margin_10"
        android:background="?attr/drawerBg"
        android:padding="@dimen/margin_15"
        android:text="@string/txt_select_date" />

    <com.groomer.customviews.CustomButtonMarkNovaRegular
        android:id="@+id/btn_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_date"
        android:layout_margin="@dimen/margin_10"
        android:background="?attr/drawerBg"
        android:padding="@dimen/margin_15"
        android:text="@string/txt_select_time" />


    <!-- press this confirm button after selecting date -->
    <Button
        android:id="@+id/btn_dialog_date_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:layout_below="@id/btn_time"
        android:layout_marginTop="@dimen/margin_20"
        android:background="@drawable/def_selector"
        android:text="@string/confirm"
        android:textColor="@color/colorWhite" />
</RelativeLayout>