<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.groomer.customviews.CustomTextViewMarkNovaSemibold
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/title_dialog_photo_choose"
            android:textStyle="bold" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#DADADA"></View>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_camera" />

            <com.groomer.customviews.CustomTextViewMarkNovaSemibold
                android:id="@+id/txt_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_camera"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_gallery" />

            <com.groomer.customviews.CustomTextViewMarkNovaSemibold
                android:id="@+id/txt_gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_gallery"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>


</LinearLayout>
